--- a/.travis.yml
+++ b/.travis.yml
@@ -185,6 +185,8 @@ jobs:
       before_install:
         - pushd ../../ && git clone https://github.com/casadi/testbot.git
         - pushd testbot && source recipes/setup.sh && popd
-      deploy: skip
+      deploy:
+        on:
+          branch: never   
       before_deploy: skip
       
