--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ script:
   - pushd casadi
   - mkdir build
   - pushd build
-  - bash -c "cmake $casadi_build_flags -DOCTAVE_BIN_PATHS=$HOME/octave/bin -DOCTAVE_LIBRARIES_PATHS=$HOME/octave/lib -DOCTAVE_INCLUDE_PATHS=$HOME/octave/include -DWITH_OPENMP=OFF -DWITH_SELFCONTAINED=ON -DCMAKE_INSTALL_PREFIX=$OCTAVEPATH -DWITH_DEEPBIND=ON -DWITH_OCTAVE=ON -DWITH_OCTAVE_IMPORT=ON -DWITH_PROFILING=ON -DWITH_DOC=ON -DWITH_EXAMPLES=ON -DWITH_EXTRA_WARNINGS=ON .."
+  - bash -c "cmake $casadi_build_flags -DOCTAVE_ROOT_DIR=$HOME/octave -DOCTAVE_BIN_PATHS=$HOME/octave/bin -DOCTAVE_LIBRARIES_PATHS=$HOME/octave/lib -DOCTAVE_INCLUDE_PATHS=$HOME/octave/include -DWITH_OPENMP=OFF -DWITH_SELFCONTAINED=ON -DCMAKE_INSTALL_PREFIX=$OCTAVEPATH -DWITH_DEEPBIND=ON -DWITH_OCTAVE=ON -DWITH_OCTAVE_IMPORT=ON -DWITH_PROFILING=ON -DWITH_DOC=ON -DWITH_EXAMPLES=ON -DWITH_EXTRA_WARNINGS=ON .."
   - make
   - make install
   - popd
