--- a/appveyor.yml
+++ b/appveyor.yml
@@ -53,13 +53,13 @@ install:
         }
   - 7z x casadi.zip -ocasadipython
   - "SET PYTHONPATH=%PYTHONPATH%;C:\\projects\\binaries\\casadipython"
-  - ren C:\\projects\\binaries\\casadipython\\casadi\\libcasadi_conic_qrqp.dll libcasadi_conic_qrqp_inert.dll
+  - #ren C:\\projects\\binaries\\casadipython\\casadi\\libcasadi_conic_qrqp.dll libcasadi_conic_qrqp_inert.dll
   - cd casadi\\test
   - echo %WORHP_LICENSE_FILE%
   - dir %WORHP_LICENSE_FILE%
   - make unittests_py
   - cd ..\\..
-  - ren C:\\projects\\binaries\\casadipython\\casadi\\libcasadi_conic_qrqp_inert.dll libcasadi_conic_qrqp.dll
+  - #ren C:\\projects\\binaries\\casadipython\\casadi\\libcasadi_conic_qrqp_inert.dll libcasadi_conic_qrqp.dll
   - python -c "from casadi.tools import *;loadAllCompiledPlugins()"
 
 branches: 
