--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,6 +19,17 @@ environment:
       PYTHON_VERSION: "2.7"
       PYTHONVERSION: "27"
       MINICONDA: C:\Miniconda-x64
+
+    - BITNESS: 32
+      PYTHON_ARCH: "32"
+      PYTHON_VERSION: "3.7"
+      PYTHONVERSION: "37"
+      MINICONDA: C:\Miniconda
+    - BITNESS: 64
+      PYTHON_ARCH: "64"
+      PYTHON_VERSION: "3.7"
+      PYTHONVERSION: "37"
+      MINICONDA: C:\Miniconda-x64
 #init:
 #  - ps: iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
 
