--- a/appveyor.yml
+++ b/appveyor.yml
@@ -57,7 +57,7 @@ install:
   #- "powershell testbot/helpers/install.ps1"
   - "set PATH=%MINICONDA%;%MINICONDA%\\Scripts;%PATH%"
   - conda config --set always_yes yes --set changeps1 no
-  - conda create -n test python=%PYTHON_VERSION% numpy requests
+  - conda create -n test python=%PYTHON_VERSION% numpy requests scipy
   - activate test
   - set PYTHONPATH=%PYTHONPATH%;C:\projects\binaries\testbot\helpers
   - call testbot/fetch_common.bat
