--- a/.travis.yml
+++ b/.travis.yml
@@ -98,7 +98,7 @@ script:
   - popd
   
   - bash -c "cmake $casadi_build_flags -DWITH_COMMON=ON -DWITH_SELFCONTAINED=ON -DBLA_STATIC=ON -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DCMAKE_TOOLCHAIN_FILE=toolchain.cmake -DWITH_PYTHON=ON -DCMAKE_INSTALL_PREFIX=../python_install -DPYTHON_PREFIX=../python_install .."
-  - ls /home/travis/build/casadi/binaries/casadi/build/casadi/interfaces/snopt/
+  #- ls /home/travis/build/casadi/binaries/casadi/build/casadi/interfaces/snopt/
   #- cat /home/travis/build/casadi/binaries/casadi/build/casadi/interfaces/snopt/CMakeFiles/casadi_nlpsol_snopt.dir/linklibs.rsp
   - make VERBOSE=1
   - make install
