--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ env:
     - MOSEKLM_LICENSE_FILE=/home/travis/build/testbot/restricted/mosek.lic
 
   matrix:
-    - BUILD_TYPE=Release NAME_SUFFIX="" TESTCOMMIT="1" MATLABRELEASE=R2014b
+    - BUILD_TYPE=Release NAME_SUFFIX="" MATLABRELEASE=R2014b # TESTCOMMIT="1"
     - BUILD_TYPE=Release NAME_SUFFIX="" MATLABRELEASE=R2014a
 
 os: linux
