--- a/.travis.yml
+++ b/.travis.yml
@@ -70,7 +70,7 @@ before_install:
     fi
   - |
     if [ "${OCTAVE_VERSION}" == "5.1.0" ]; then
-       sudo add-apt-repository ppa:alexlarsson/flatpak
+       sudo add-apt-repository -y ppa:alexlarsson/flatpak
        sudo apt update
        sudo apt install -y flatpak
        flatpak remote-add --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo
