--- a/.travis.yml
+++ b/.travis.yml
@@ -36,6 +36,7 @@ script:
   - git clone https://github.com/jgillis/pyreport.git
   - pushd pyreport && python setup.py install && popd
   - sudo apt-get install latex2html texlive-science texlive-latex-base texlive-fonts-recommended texlive-latex-recommended texlive-latex-extra -y
+  - pip install -r docs/users_guide/requirements.txt
   - sudo add-apt-repository -y ppa:techzilla/doxygen-backport
   - sudo apt-get update -q
   - sudo apt-get install -y doxygen
