--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,7 @@ script:
   - pip install -r docs/users_guide/requirements.txt
   - sudo add-apt-repository -y ppa:techzilla/doxygen-backport
   - sudo apt-get update -q
-  - sudo apt-get install -y doxygen
+  - sudo apt-get install -y --allow-unauthenticated doxygen
   - "mkdir -p ~/.matplotlib && echo 'backend : Agg' > ~/.matplotlib/matplotlibrc"
   - export MATPLOTLIBRC=$HOME/.matplotlib
   - echo $PYTHONPATH
