--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,6 +7,7 @@ environment:
     keyA:
       secure: 44jgfY+doJx9eHLCweOl6Mf7qoeeRlA2Dch0cLUGbvRorXaqr6bs8tVsJ/KXGPVIA4DrXLlpaEeb2eJ5LM4Mdeq5Ux2txHsQpTAnBDSihWQ=
     GIT_ALLOW_PROTOCOL: "file:git:http:https:ssh:ext"
+    SKIP_GUROBI_TESTS: 1
 
   matrix:
     - BITNESS: 32
@@ -40,10 +41,14 @@ environment:
       PYTHON_VERSION: "3.7"
       PYTHONVERSION: "37"
       MINICONDA: C:\Miniconda-x64
+
+image: Visual Studio 2017
+
 #init:
 #  - ps: iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
 
 install:
+  - call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvars64.bat"
   - git submodule init
   - git submodule update
   - cd casadi
