--- a/appveyor.yml
+++ b/appveyor.yml
@@ -42,13 +42,14 @@ environment:
       PYTHONVERSION: "37"
       MINICONDA: C:\Miniconda-x64
 
-image: Visual Studio 2017
+image: Visual Studio 2015
 
 #init:
 #  - ps: iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
 
 install:
-  - call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvars64.bat"
+  - call "C:\Program Files\Microsoft SDKs\Windows\v7.1\Bin\SetEnv.cmd" /x64
+  - call "C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\vcvarsall.bat" x86_amd64
   - git submodule init
   - git submodule update
   - cd casadi
