--- a/.travis.yml
+++ b/.travis.yml
@@ -74,7 +74,8 @@ branches:
     - /.*appveyor.*/
     - /.*commit.*/
     
-before_install: 
+before_install:
+  - (while true ; do sleep 60 ; echo "ping" ; done ) &
   - shell_session_update() { :; } # Workaround for travis-ci/travis-ci#6522
   - pwd
   - pushd casadi && export COMMIT=`git rev-parse --short HEAD` && popd
