--- a/.travis.yml
+++ b/.travis.yml
@@ -73,8 +73,8 @@ before_install:
        sudo add-apt-repository -y ppa:alexlarsson/flatpak
        sudo apt update
        sudo apt install -y flatpak
-       flatpak remote-add --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo
-       flatpak install -y flathub org.octave.Octave
+       sudo flatpak remote-add --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo
+       sudo flatpak install -y flathub org.octave.Octave
     fi
   - sudo apt-get install p7zip-full -y
   - export SLURP_OS=trusty
