--- a/.travis.yml
+++ b/.travis.yml
@@ -70,6 +70,8 @@ before_install:
     fi
   - |
     if [ "${OCTAVE_VERSION}" == "5.1.0" ]; then
+       export OCTAVE_ROOT=/var/lib/flatpak/app/org.octave.Octave/x86_64/stable/active/files/
+       export casadi_build_flags="$casadi_build_flags -DOCTAVE_ROOT_DIR=$OCTAVE_ROOT -DOCTAVE_BIN_PATHS=$OCTAVE_ROOT/bin -DOCTAVE_LIBRARIES_PATHS=$OCTAVE_ROOT/lib -DOCTAVE_INCLUDE_PATHS=$OCTAVE_ROOT/include"
        sudo add-apt-repository -y ppa:alexlarsson/flatpak
        sudo apt update
        sudo apt install -y flatpak
