--- a/.travis.yml
+++ b/.travis.yml
@@ -70,15 +70,15 @@ before_install:
     fi
   - |
     if [ "${OCTAVE_VERSION}" == "5.1.0" ]; then
-       export OCTAVE_ROOT=/var/lib/flatpak/app/org.octave.Octave/x86_64/stable/active/files/
-       export casadi_build_flags="$casadi_build_flags -DOCTAVE_ROOT_DIR=$OCTAVE_ROOT -DOCTAVE_BIN_PATHS=$OCTAVE_ROOT/bin -DOCTAVE_LIBRARIES_PATHS=$OCTAVE_ROOT/lib -DOCTAVE_INCLUDE_PATHS=$OCTAVE_ROOT/include"
+       export OCTAVE_ROOT_TMP=/var/lib/flatpak/app/org.octave.Octave/x86_64/stable/active/files
+       export casadi_build_flags="$casadi_build_flags -DOCTAVE_ROOT_DIR=$OCTAVE_ROOT_TMP -DOCTAVE_BIN_PATHS=$OCTAVE_ROOT_TMP/bin -DOCTAVE_LIBRARIES_PATHS=$OCTAVE_ROOT_TMP/lib -DOCTAVE_INCLUDE_PATHS=$OCTAVE_ROOT_TMP/include"
        echo $casadi_build_flags
        sudo add-apt-repository -y ppa:alexlarsson/flatpak
        sudo apt update
        sudo apt install -y flatpak
        sudo flatpak remote-add --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo
        sudo flatpak install -y flathub org.octave.Octave
-       ls $OCTAVE_ROOT
+       ls $OCTAVE_ROOT_TMP
     fi
   - sudo apt-get install p7zip-full -y
   - export SLURP_OS=trusty
