--- a/.travis.yml
+++ b/.travis.yml
@@ -91,6 +91,8 @@ script:
   - export CFLAGS="$CFLAGS -DCPXSIZE_BITS=32"
   - bash -c "cmake $casadi_build_flags -DMATLAB_EXTRA_CXXFLAGS=\"-D__STDC_UTF_16__\" -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DWITH_SELFCONTAINED=ON -DBLA_STATIC=ON -DBLA_VENDOR=Generic -DBLA_DIR=/home/travis/build/lapack -DWITH_MATLAB=ON -DENABLE_STATIC=OFF -DENABLE_SHARED=ON -DWITH_DEEPBIND=ON -DCMAKE_TOOLCHAIN_FILE=toolchain.cmake -DCMAKE_INSTALL_PREFIX=../matlab_install -DWITH_EXAMPLES=OFF .."
   - make install -j2 VERBOSE=1
+  - $compilerprefix-dlltool --input-def ../casadi/core/casadi.def --dllname ../matlab_install/casadi/libcasadi.dll  --output-lib ../matlab_install/casadi/casadi.lib
+  - $compilerprefix-dlltool --input-def ../external_packages/osqp/osqp.def --dllname ../matlab_install/casadi/libosqp.dll  --output-lib ../matlab_install/casadi/osqp.lib
   - ls /usr/lib/gcc/$compilerprefix
   - cp /usr/lib/gcc/$compilerprefix/*win32/*.dll ../matlab_install/casadi
   - cp /usr/$compilerprefix/lib/*.dll ../matlab_install/casadi
