--- a/appveyor.yml
+++ b/appveyor.yml
@@ -81,13 +81,15 @@ install:
   - 7z x casadi.zip -ocasadipython
   - "SET PYTHONPATH=%PYTHONPATH%;C:\\projects\\binaries\\casadipython"
   - #ren C:\\projects\\binaries\\casadipython\\casadi\\libcasadi_conic_qrqp.dll libcasadi_conic_qrqp_inert.dll
+  - ren C:\projects\binaries\casadipython\casadi\libcasadi_nlpsol_knitro.dll libcasadi_nlpsol_knitro_inert.dll
   - cd casadi\\test
-  - ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
+  #- ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
   - echo %WORHP_LICENSE_FILE%
   - dir %WORHP_LICENSE_FILE%
   - make unittests_py
   - cd ..\\..
   - #ren C:\\projects\\binaries\\casadipython\\casadi\\libcasadi_conic_qrqp_inert.dll libcasadi_conic_qrqp.dll
+  - ren C:\projects\binaries\casadipython\casadi\libcasadi_nlpsol_knitro_inert.dll libcasadi_nlpsol_knitro.dll
   - python -c "from casadi.tools import *;loadAllCompiledPlugins()"
 
 branches: 
