--- a/.travis.yml
+++ b/.travis.yml
@@ -28,4 +28,12 @@ script:
     EOF
   #- pushd $mypwd/casadi && git tag -a $VERSION -m 'version $VERSION' && git push --tags && popd
 
+install:
+  - pushd ../../ && git clone https://github.com/casadi/testbot.git
+  - pushd testbot && source recipes/setup.sh && popd
+  - TRAVIS_PYTHON_VERSION=3.7
+  - python_setup
+  - popd
+
+
 language: cpp
