--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ script:
   - export CHECK=`git rev-parse --short=7 $VERSION || echo $COMMIT`
   - echo "Comparing $CHECK vs $COMMIT..."
   - if [ "$COMMIT" == "$CHECK" ]; then echo "All is fine"; else exit 1; fi
-  - sudo pip install github3.py
+  - pip install github3.py
   - python transfer.py $github_token $COMMIT $FULL_COMMIT $VERSION
   - pushd ../../ && git clone https://github.com/casadi/testbot.git
   - pushd testbot && source recipes/setup.sh && popd
