--- a/.travis.yml
+++ b/.travis.yml
@@ -44,7 +44,7 @@ script:
   - mkdir build
   - pushd build
   - bash -c "cmake $casadi_build_flags -DWITH_OPENMP=OFF  -DWITH_SELFCONTAINED=ON -DWITH_MATLAB=ON  -DCMAKE_INSTALL_PREFIX=$MATLABPATH .."
-  - osx_rpath
+  - osx_rpath_gcc7
   - make VERBOSE=1
   - make install
   - popd
@@ -81,7 +81,7 @@ before_install:
   - pushd casadi && export COMMIT=`git rev-parse --short HEAD` && popd
   - pushd ../../ && git clone https://github.com/casadi/testbot.git
   - pushd testbot && source recipes/setup.sh || remote_access && popd
-  - osx_gcc49_setup || remote_access
+  - osx_gcc7_setup || remote_access
   - slurp swig_matlab || remote_access
   - python_setup || remote_access
   - mkdir -p /Users/travis/build/casadi/testbot || remote_access
