--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ env:
     - TRAVIS_PYTHON_VERSION=3.5 NUMPYVERSION=1.9
     - TRAVIS_PYTHON_VERSION=3.6 NUMPYVERSION=1.11
     - TRAVIS_PYTHON_VERSION=3.7 NUMPYVERSION=1.11
+    - TRAVIS_PYTHON_VERSION=3.8 NUMPYVERSION=1.11
 
 before_script:
   - |
