--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ env:
     
   matrix:
     - BUILD_TYPE=Release NAME_SUFFIX="" TESTCOMMIT="1" MATLABRELEASE=R2015a
+    - BUILD_TYPE=Release NAME_SUFFIX="" MATLABRELEASE=R2019a
     - BUILD_TYPE=Release NAME_SUFFIX="" MATLABRELEASE=R2014b
     - BUILD_TYPE=Release NAME_SUFFIX="" MATLABRELEASE=R2014a
   
