--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ env:
     - SLURP_GCC=4.9
     - SLURP_OS=osx
     - KEEP_GOING=1
-    - TRAVIS_PYTHON=3.7
+    - PYTHON_VERSION=3.7
     
   matrix:
     - BUILD_TYPE=Release NAME_SUFFIX="" TESTCOMMIT="1" MATLABRELEASE=R2015a
