--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 # Inspiration: https://github.com/edx/configuration/blob/master/.travis.yml
 os: osx
 
-osx_image: xcode9.4
+osx_image: xcode11.2 #xcode9.4
+
+
 
 env: 
   global: 
