--- a/.travis.yml
+++ b/.travis.yml
@@ -47,11 +47,10 @@ script:
   - pushd casadi
   - mkdir build
   - pushd build
-  # $casadi_build_flags
   - gcc --version
   - source activate condaenv_build
   - gcc --version
-  - bash -c "cmake -DWITH_OPENMP=OFF  -DWITH_SELFCONTAINED=ON -DWITH_MATLAB=ON  -DCMAKE_INSTALL_PREFIX=$MATLABPATH .."
+  - bash -c "cmake $casadi_build_flags -DWITH_OPENMP=OFF  -DWITH_SELFCONTAINED=ON -DWITH_MATLAB=ON  -DCMAKE_INSTALL_PREFIX=$MATLABPATH .."
   - osx_rpath_gcc7
   - make VERBOSE=1
   - make install
