--- a/.travis.yml
+++ b/.travis.yml
@@ -64,6 +64,7 @@ before_install:
   - pushd casadi && export COMMIT=`git rev-parse --short=7 HEAD` && popd
   - pushd ../../ && git clone https://github.com/casadi/testbot.git
   - pushd testbot && source recipes/setup.sh && popd
+  - python_setup_light
   - sudo apt-get install p7zip-full -y
   - export SLURP_OS=trusty
   - export SLURP_GCC=4.7
@@ -77,5 +78,4 @@ before_install:
   - export FC=gfortran-4.7
   - ls /usr/lib/x86_64-linux-gnu
   - sudo apt-get install fakeroot rpm alien
-  - sudo pip install pysftp
   - ssh-keyscan web.sourceforge.net >> ~/.ssh/known_hosts 
