--- a/.travis.yml
+++ b/.travis.yml
@@ -74,7 +74,7 @@ before_install:
        sudo apt update
        sudo apt install -y flatpak
        sudo flatpak remote-add --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo
-       sudo flatpak --update=5d975550fc59a93fdddae167d3c9fb5ef9fa675b org.octave.Octave # lastest 4.4.1 per https://github.com/flathub/org.octave.Octave/commits/master
+       sudo flatpak update --commit=5d975550fc59a93fdddae167d3c9fb5ef9fa675b org.octave.Octave # lastest 4.4.1 per https://github.com/flathub/org.octave.Octave/commits/master
        sudo flatpak install -y flathub org.octave.Octave
        ls $OCTAVE_ROOT_TMP
     fi
@@ -88,7 +88,7 @@ before_install:
        sudo apt update
        sudo apt install -y flatpak
        sudo flatpak remote-add --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo
-       sudo flatpak --update=ac5a3b892fcb5ce79164380e1d0d4e8fe4290ab3 org.octave.Octave # lastest 5.1.0 per https://github.com/flathub/org.octave.Octave/commits/master
+       sudo flatpak update --commit=ac5a3b892fcb5ce79164380e1d0d4e8fe4290ab3 org.octave.Octave # lastest 5.1.0 per https://github.com/flathub/org.octave.Octave/commits/master
        sudo flatpak install -y flathub org.octave.Octave
        ls $OCTAVE_ROOT_TMP
     fi
@@ -102,7 +102,7 @@ before_install:
        sudo apt update
        sudo apt install -y flatpak
        sudo flatpak remote-add --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo
-       sudo flatpak --update=07bc55d3c81304bcfebf2372ecfa255ded8f8367 org.octave.Octave # lastest 5.2.0 per https://github.com/flathub/org.octave.Octave/commits/master
+       sudo flatpak update --commit=07bc55d3c81304bcfebf2372ecfa255ded8f8367 org.octave.Octave # lastest 5.2.0 per https://github.com/flathub/org.octave.Octave/commits/master
        sudo flatpak install -y flathub org.octave.Octave
        ls $OCTAVE_ROOT_TMP
     fi
